[package]
name = "proksi"
description = "A batteries-included reverse proxy with automatic HTTPS using Cloudflare Pingora and Let's Encrypt."
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["proxy", "https", "reverse-proxy", "load-balancer", "pingora"]
categories = ["web-programming::http-server", "network-programming"]
exclude = [
    "*.yaml",
    "*.yml",
    "*.toml",
    "src/*.md",
    "examples/",
    "dist/",
    "docs/",
    "target/",
    "tests/",
    "assets/",
    "tmp/",
    "Makefile",
    "Dockerfile",
    "gitbook/",
    ".github/",
]
authors = ["The Proksi Contributors <toaster.chicory-0b@icloud.com>"]
readme = "../../README.md"
homepage = "https://github.com/luizfonseca/proksi"
repository = "https://github.com/luizfonseca/proksi"
rust-version = "1.70.0"
workspace = "../.."

[dependencies]
TinyUFO = "0.4.0"
acme-v2 = "0.9.3"
anyhow = "1.0.99"
arc-swap = "1.7.1"
async-trait = "0.1.87"
axum = "0.7.4"
bollard = "0.16.1"
bollard-stubs = "=1.44.0-rc.2"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "cargo"] }
cookie = { version = "0.18.1", features = ["private"] }
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["yaml", "env"] }
futures = "0.3.30"
hcl-rs = "0.18.4"
http = "1.2.0"
itertools = "0.14.0"
jsonwebtoken = { version = "9.3.1", default-features = false }
nix = { version = "0.29.0", features = ["signal"] }
notify = { version = "8.0.0", default-features = false, features = [
    "fsevent-sys",
] }
num_cpus = "1.16.0"
once_cell = "1.21.3"
openssl = { version = "0.10", features = ["vendored"] }
papaya = "0.2.0"
path-tree = "0.8.3"
pingora = { version = "0.4.0", features = ["lb", "openssl", "proxy", "cache"] }
pingora-cache = "0.4.0"
pingora-core = "0.4.0"
prometheus = "0.14.0"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.12.15", features = ["json"] }
seize = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
short-crypt = "1.0.28"
thiserror = "1.0"
time = "0.3.41"
tokio = { version = "1.44.2", features = [
    "sync",
    "rt-multi-thread",
    "fs",
    "io-std",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
uuid = { version = "1.15.1", features = ["v4"] }
# wasmtime = "31.0.0"
strum = "0.25"
strum_macros = "0.25"
html-escape = "0.2"

[[bench]]
name = "dashmap_arc"
harness = false
path = "../benches"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
figment = { version = "0.10.19", features = ["toml", "yaml", "env", "test"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio-test = "0.4.2"
futures-util = "0.3.28"
